@@ -43,7 +43,7 @@
 .\"
 .\"
 .\" Changes by Gunnar Ritter, Freiburg i. Br., Germany, February 2006.
-.\" Sccsid @(#)doc.tr	1.99 (gritter) 8/7/06
+.\" Sccsid @(#)doc.tr	1.100 (gritter) 8/7/06
 .\"
 .\" from file m.mac
 .do xflag 3
@@ -73,6 +73,7 @@
 .kernpair R , B p 80
 .kernpair R \[longs] R ' 110
 .kernpair B f I F 50
+.kernpair B \\ B / 40
 .ig
 .fps math 1 R tim_____ pfb
 .fp 2 I timi____ pfb
@@ -1738,16 +1739,19 @@ Reference	Sequence	Meaning
 \T'e_grave'2.1\T	\T'e_grave'\fB\e\`\fR\T	\T'e_grave'\` (grave accent); equivalent to \fB\e(ga\fR\T
 \T'e_-'2.1\T	\T'e_-'\fB\e\-\fR\T	\T'e_-'\- Minus sign in the \fIcurrent\fR font\T
 \T'e_.'7\T	\T'e_.'\fB\e\^.\fR\T	\T'e_.'Period (dot) (see \fBde\fR)\T
-\T'e_ '11.1\T	\T'e_ '\fB\e\fR(space)\T	\T'e_ 'Unpaddable space-size space character\T
-\T'e_~'11.1\T	\T'e_~'\fB\e\(ap\fR\T	\T'e_~'Paddable no-break space character\T
+\T'e_ '4.1\T	\T'e_ '\fB\e\fR(space)\T	\T'e_ 'Unpaddable space-size space character\T
+\T'e_~'4.1\T	\T'e_~'\fB\e\(ap\fR\T	\T'e_~'Paddable no-break space character\T
 \T'e_0'11.1\T	\T'e_0'\fB\e0\fR\T	\T'e_0'Digit width space\T
 .tr ||
 \T'e_|'11.1\T	\T'e_|'\fB\e\||\fR\T	\T'e_|'1/6\|em narrow space character (zero width in \*(NR)\T
 .tr |
 \T'e_^'11.1\T	\T'e_^'\fB\e^\fR\T	\T'e_^'1/12\|em half-narrow space character (zero width in \*(NR)\T
+\T'e_/'11.1\T	\T'e_/'\fB\e/\fR\T	\T'e_/'Italic correction (zero width in \*(NR)\T
+\T'e_,'11.1\T	\T'e_,'\fB\e,\fR\T	\T'e_,'Left italic correction (zero width in \*(NR)\T
 .tr &&
 \T'e_&'4.1\T	\T'e_&'\fB\e&\fR\T	\T'e_&'Non-printing, zero width character\T
 .tr &.
+\T'e_)'4.1\T	\T'e_)'\fB\e)\fR\T	\T'e_)'Transparent non-printing zero width character\T
 \T'e_!'10.6\T	\T'e_!'\fB\e!\fR\T	\T'e_!'Transparent line indicator\T
 \T'e_"'10.8\T	\T'e_"'\fB\e"\fR\T	\T'e_"'Beginning of comment\T
 \T'e_#'10.8\T	\T'e_#'\fB\e#\fR\T	\T'e_#'Comment including newline\T
@@ -2882,7 +2886,9 @@ Any adjacent pair of words that must be kept together
 in the adjustment process)
 can be tied together by separating them with the
 \fIunpaddable space\fR character
-\T'e_ '"\fB\e\ \ \fR" (backslash-space).\T
+\A'e_ '"\fB\e\ \ \fR" (backslash-space).
+The paddable no-break space character \A'e_~'\fB\e\(ap\fR
+keeps words on the same output line but may be spread during adjustment.
 The adjusted word spacings are uniform in \*(TR
 and the minimum interword spacing can be controlled
 with the \T'ss'\fBss\fR request\T \T's_font'(\(sc2).\T
@@ -2942,6 +2948,8 @@ add \A'e_&'\fB\e&\fR to the end of the input line;
 the \T'ss'\fBss\fR request\T \T's_font'(\(sc2)\T
 changes the size of this space character and can also disable it globally.
 Both the sentence-ending and the transparent characters are configurable.
+The \A'e_)'\fB\e)\fR character is always transparent
+but behaves like \fB\e&\fR in all other respects.
 Multiple inter-word space characters found in the input are retained,
 except for trailing spaces;
 initial spaces also cause a \fIbreak\fR.
@@ -4310,7 +4318,7 @@ Vertical	Effect in	Horizontal	Effect in
 Local Motion	\*(TR	\*(NR	Local Motion	\*(TR	\*(NR
 _
 .sp .4
-\A'e_ '\A'e_~'\A'e_0'\A'e_u'\A'e_d'\A'e_r'\A'e_|'\A'e_^'
+\A'e_0'\A'e_u'\A'e_d'\A'e_r'\A'e_|'\A'e_^'
 .sp -1
 .T&
 l2|ls2||l2|ls2.
@@ -4339,6 +4347,23 @@ As an example,
 could be generated by the sequence
 \fBE\es\-2\ev\'\-0.4m\'2\ev\'0.4m\'\es+2\fR;
 note that the 0.4|em vertical motions are at the smaller size.
+.pg
+The \A'e_/'\fB\e/\fR escape sequence inserts an italic correction,
+i.e. a small piece of horizontal motion
+(1/12\|em) that should be sufficient
+to separate an italic character from a following roman character.
+Similarly, \A'e_,'\fB\e,\fR adds a left italic correction,
+always a zero motion,
+that should be sufficient
+to separate a roman character
+from an immediately following italic character.
+Both exist for basic \fIgroff\fR\ [6] compatibility only.
+It is recommended that the \T'kernpair'\fBkernpair\fR\T request
+is used for these purposes instead;
+it allows a more exact optical separation
+since the shape of both characters can be taken into account
+and also does not need to be be positioned directly in the input text
+at every occasion.
 .sc
 \A'c_width'Width Function.
 The \fIwidth\fR function \A'e_w'\fB\ew\'\fIstring\fB\|\'\fR
